# LibraryManagement

./: .gitignore  .mutmut-cache  filler.py  generator.py  mutmut_config.py  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  ci.yml  mutmut.yml  radon.yml
api/: README.md  config.py  di.py  filler.py  generator.py  main.py  pyproject.toml
api/models/: api.py
api/persistence/: models.py
api/routers/: books.py  collections.py  main.py  yndx_oauth.py
api/services/: books.py  collections.py  users.py
api/tests/: conftest.py
frontend/: README.md  app.py  pyproject.toml
frontend/src/: Home.py  app.py
frontend/src/model/: book.py
frontend/src/operations/: token_ops.py
frontend/src/pages/: 1_My_books.py  2_Find_books.py  My_books.py
locust/: README.md  locustfile.py
tests/: conftest.py  test_books.py
tests/config/: test_config.py
tests/di/: test_di.py  test_yndx_oauth.py
ui_tests/add_to_my_books/: Script1714415700781.groovy
ui_tests/delete_book_from_my_books/: Script1714415700782.groovy
ui_tests/search_existing_book/: Script1714415700781.groovy
ui_tests/search_not_existing_book/: Script1714415700782.groovy
ui_tests/set_reading_progress/: Script1714415700782.groovy
ui_tests/suggest_book/: Script1714415700782.groovy
