[tool.poetry]
name = "librarymanagement"
version = "0.1.0"
description = ""
authors = ["Artemiy Kochergin <kocherginartem@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
