[tool.poetry]
name = "librarymanagement"
version = "0.1.0"
description = ""
authors = ["Inga Ezhova <i.ezhova@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
bandit = "^1.7.8"
mutmut = "^2.4.5"
radon = "^6.0.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"