[tool.poetry]
name = "librarymanagement"
version = "0.1.0"
description = ""
authors = ["Inga Ezhova <i.ezhova@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
bandit = "^1.7.8"
mutmut = "^2.4.5"
radon = "^6.0.1"
pytest-cov = "^5.0.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiosqlite = "^0.20.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pytest-coverage = "^0.0"
pytest-asyncio = "^0.23.6"
flake8 = "^7.0.0"
streamlit = "^1.33.0"
extra-streamlit-components = "^0.1.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mutmut]
paths_to_mutate = ["api"]