[tool.poetry]
name = "library-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiosqlite = "^0.20.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-coverage = "^0.0"
pytest-asyncio = "^0.23.6"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
